# gemini-tales-v2

./: .gitignore  ARCHITECTURE.md  README.md  deploy_app.ps1  pyproject.toml
app/: .gcloudignore  avatar_generator.py  main.py
app/frontend/: .env.example
app/frontend/public/: metadata.json
app/frontend/src/: App.tsx  config.ts  types.ts
app/frontend_legacy/live_demo/: geminilive.js
backend/: .env.example  inspect_runner.py  inspect_runner_v2.py  pyproject.toml
backend/agents/: adk_app.py  agent.py  deploy.ps1  run_local.ps1
backend/agents/content_builder/: agent.py  pyproject.toml
backend/agents/judge/: .dockerignore  agent.py  pyproject.toml
backend/agents/orchestrator/: Dockerfile  agent.py  authenticated_httpx.py  pyproject.toml  run.sh
backend/agents/researcher/: agent.py  pyproject.toml
backend/agents/shared/: config.py
backend/app/: .dockerignore  .env.example  Dockerfile  authenticated_httpx.py  avatar_generator.py  main.py  puck_agent.py  pyproject.toml
backend/app/agents/: agent.py  tools.py
backend/app/routers/: agent_story.py  avatar.py  proxy.py  puck_live.py  search.py
backend/app/services/: adk_service.py  gcp_auth.py  music_generator.py
backend/multi_tool_agent/: agent.py
backend/my_agent/: agent.py
backend/shared/: authenticated_httpx.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BiometricLock.tsx  ExerciseModeSelector.tsx
frontend/src/hooks/: useAgentStory.ts  useGeminiSocket.ts
frontend/src/utils/: audioRecorder.ts  (+3 more)
(+5 files in other folders)
